--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -7,10 +7,9 @@
 
 	<main
 		class="">
-
 		{# section profil #}
 		<section class="card col-12 col-md-6 col-lg-6 mt-3 container p-0 d-flex align-items-center">
-			{% if not user.picture %}
+			{% if not inspectedUser.picture %}
 				<img class="col-2 p-1 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/>
 			{% else %}
 				<img class="col-2 p-1 rounded-circle" src="/images/userImages/{{inspectedUser.id}}/{{inspectedUser.picture}}" class="card-img-top"/>
@@ -32,8 +31,7 @@
 			</div>
 			<hr class="m-0">
 			{% if inspectedUser.motoUser.length == 0 %}
-				<p class="mx-auto my-2 text-danger">
-					Hey l'ami, tu n'as pas de bécane !</p>
+				<p class="mx-auto my-2 text-danger">Hey l'ami, tu n'as pas de bécane !</p>
 			{% endif %}
 			{% for moto in inspectedUser.motoUser %}
 				<article class="row card-body text-center border border-muted rounded m-2">
@@ -47,90 +45,84 @@
 			{% endfor %}
 		</section>
 
-		{# section contact #}
+		{# section mes sortie #}
 		<section class="card col-12 col-md-6 col-lg-6 mt-3 bg-light container p-0">
-			<h2 class="card-title m-0 p-1">Contact
+			<h2 class="card-title m-0 p-1">Mes sorties</h2>
+			<hr class="m-0">
+			{% if inspectedUser.eventUser.length == 0 %}
+				<p class="mx-auto my-2 text-danger"> Hey l'ami, tu n'as aucune sortie organisée !</p>
+			{% endif %}
+			{% for event in inspectedUser.eventUser %}
+				<article class="row card-body d-flex justify-content-end border border-muted rounded m-2">
+					<div class="col-6 d-flex flex-column justify-content-between">
+						<div class=" d-flex  align-items-center">
+							<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.picture}}" class="card-img-top"/>
+							<div>
+								<h6 class="card-title">{{inspectedUser.pseudo}}</h5>
+								<p class="card-subtitle mb-2 text-muted">{{user.motoUser[0].brand}}
+									{{user.motoUser[0].model}}
+									{{user.motoUser[0].cylinder}}</p>
+							</div>
+						</div>
+						<h5 class="card-text">{{event.title}}</h5>
+						<p class="text-success m-0">Rider
+							{{event.riderJoin.length}}+</p>
+					</div>
+					<div class="col-6">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
+					</div>
+
+					<a href="/evenement/{{event._id}}/{{inspectedUser._id}}" class="btn btn-light text-primary col-4">En savoir plus</a>
+
+				</article>
+			{% endfor %}
+		</section>
+
+		{# section je participe #}
+		<section class="card col-12 col-md-6 col-lg-6 mt-3 bg-light container p-0">
+			<h2 class="card-title m-0 p-1">Je participe</h2>
+			<hr class="m-0">
+			{% if inspectedUser.eventUser.length == 0 %}
+				<p class="mx-auto my-2 text-danger"> Hey l'ami, tu ne participes à aucune sortie !</p>
+			{% endif %}
+			{% for object in eventJoined %}
+				{% for event in object.eventUser %}
+					<article class="row card-body d-flex justify-content-end border border-muted rounded m-2">
+						<div class="col-6 d-flex flex-column justify-content-between">
+							<div class=" d-flex  align-items-center">
+								<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{object.userEvent.id}}/{{object.userEvent.picture}}" class="card-img-top"/>
+								<div>
+									<h6 class="card-title">{{object.userEvent.pseudo}}</h5>
+									<p class="card-subtitle mb-2 text-muted">{{object.userEvent.motoUser[0].brand}}
+										{{object.userEvent.motoUser[0].model}}
+										{{object.userEvent.motoUser[0].cylinder}}</p>
+								</div>
+							</div>
+							<h5 class="card-text">{{event.title}}</h5>
+							<p class="text-success m-0">Rider
+								{{event.riderJoin.length}}+</p>
+						</div>
+						<div class="col-6">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
+						</div>
+
+						<a href="/evenement/{{event.id}}/{{object.userEvent.id}}" class="btn btn-light text-primary col-4">En savoir plus</a>
+
+					</article>
+				{% endfor %}
+			{% endfor %}
+		</section>
+
+		{# Page photos #}
+		<section class="card col-12 col-md-6 col-lg-6 mt-3 bg-light mb-3 container p-0">
+			<h2 class="card-title m-0 p-1">Mes photos
 				<span class="text-danger">(en construction)<span></h2>
 					<hr class="m-0">
-					<article class="row card-body border border-muted rounded m-2">
-						<h6 class="card-title text-center">06 62 31 22 79</h5>
-						<h6 class="card-subtitle mb-2 text-muted text-center">email.test@test.fr</h5>
-						<h6 class="card-title text-center">Marseille 9ème (13)</h5>
+					<article class="row ">
+						<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
+						<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
+						<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
 					</article>
 				</section>
-
-				{# section mes sortie #}
-				<section class="card col-12 col-md-6 col-lg-6 mt-3 bg-light container p-0">
-					<h2 class="card-title m-0 p-1">Mes sorties</h2>
-					<hr class="m-0">
-					{% for event in inspectedUser.eventUser %}
-						<article class="row card-body d-flex justify-content-end border border-muted rounded m-2">
-							<div class="col-6 d-flex flex-column justify-content-between">
-								<div class=" d-flex  align-items-center">
-									<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{user.id}}/{{user.picture}}" class="card-img-top"/>
-									<div>
-										<h6 class="card-title">{{inspectedUser.pseudo}}</h5>
-										<p class="card-subtitle mb-2 text-muted">{{user.motoUser[0].brand}}
-											{{user.motoUser[0].model}}
-											{{user.motoUser[0].cylinder}}</p>
-									</div>
-								</div>
-								<h5 class="card-text">{{event.title}}</h5>
-								<p class="text-success m-0">Rider
-									{{event.riderJoin.length}}+</p>
-							</div>
-							<div class="col-6">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
-							</div>
-
-							<a href="/evenement/{{event._id}}/{{inspectedUser._id}}" class="btn btn-light text-primary col-4">En savoir plus</a>
-
-						</article>
-					{% endfor %}
-				</section>
-
-				{# section je participe #}
-				<section class="card col-12 col-md-6 col-lg-6 mt-3 bg-light container p-0">
-					<h2 class="card-title m-0 p-1">Je participe</h2>
-					<hr class="m-0">
-					{% for object in eventJoined %}
-						{% for event in object.eventUser %}
-							<article class="row card-body d-flex justify-content-end border border-muted rounded m-2">
-								<div class="col-6 d-flex flex-column justify-content-between">
-									<div class=" d-flex  align-items-center">
-										<img class="col-2 p-1 rounded-circle" src="./images/userImages/{{object.userEvent.id}}/{{object.userEvent.picture}}" class="card-img-top"/>
-										<div>
-											<h6 class="card-title">{{object.userEvent.pseudo}}</h5>
-											<p class="card-subtitle mb-2 text-muted">{{object.userEvent.motoUser[0].brand}}
-												{{object.userEvent.motoUser[0].model}}
-												{{object.userEvent.motoUser[0].cylinder}}</p>
-										</div>
-									</div>
-									<h5 class="card-text">{{event.title}}</h5>
-									<p class="text-success m-0">Rider
-										{{event.riderJoin.length}}+</p>
-								</div>
-								<div class="col-6">
-									<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
-								</div>
-
-								<a href="/evenement/{{event.id}}/{{object.userEvent.id}}" class="btn btn-light text-primary col-4">En savoir plus</a>
-
-							</article>
-						{% endfor %}
-					{% endfor %}
-				</section>
-
-				{# Page photos #}
-				<section class="card col-12 col-md-6 col-lg-6 mt-3 bg-light mb-3 container p-0">
-					<h2 class="card-title m-0 p-1">Mes photos
-						<span class="text-danger">(en construction)<span></h2>
-							<hr class="m-0">
-							<article class="row ">
-								<img class="col-4 " src="./pictures/motard.jpg" alt="image de moto">
-								<img class="col-4 " src="./pictures/motard.jpg" alt="image de moto">
-								<img class="col-4 " src="./pictures/motard.jpg" alt="image de moto">
-							</article>
-						</section>
-					</main>
-				{% endblock %}
+			</main>
+		{% endblock %}
