--- a/views/template/event/event.html.twig
+++ b/views/template/event/event.html.twig
@@ -1,11 +1,27 @@
 {% extends "../../main.html.twig" %}
+
+{% block stylesheets %}
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link
+	rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+	<!-- Ces deux balises link sont à insérer entre les deux balises existantes -->
+	<link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"/>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css"/>
+
+	<link href="/main.css" rel="stylesheet">
+{% endblock %}
+
 {% block main %}
 	<main>
 		<article class="col-6 mx-auto card-body bg-light border border-muted rounded m-2" id="{{event._id}}">
 			<h1>{{event.title}}</h1>
 			<hr class="m-0">
-			<iframe title="card exemple" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
-
+			<div class="myCards ">
+				{% for stepDetail in event.mySteps %}
+					<input type="hidden" class="stepsLat" value="{{stepDetail.stepLat}}">
+					<input type="hidden" class="stepsLon" value="{{stepDetail.stepLon}}">
+				{% endfor %}
+			</div>
 			<div class=" d-flex mb-3 align-items-center">
 				{% if not userEvent.picture %}
 					<a href="/profil/{{userEvent._id}}" class="col-2 p-1"><img class="col-12 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/></a>
@@ -21,28 +37,28 @@
 			</div>
 			<div class="d-flex justify-content-between">
 				<p class="card-text text-success my-1">Date de départ</p>
-				<p class="card-text text-secondary my-1">{{event.startDate|date("d/m/Y")}}</p> <!-- pour configurer le format de la date -->
+				<p class="card-text text-secondary my-1">{{event.startDate|date("d/m/Y")}}</p>
+				<!-- pour configurer le format de la date -->
 			</div>
 			<div class="d-flex justify-content-between">
 				<p class="card-text text-success my-1">Heure de départ</p>
 				<p class="card-text text-secondary my-1">{{event.hour}}</p>
 			</div>
-			<div class="d-flex justify-content-between">
-				<p class="card-text text-success my-1">Lieu de départ</p>
-				<p class="card-text text-secondary my-1">{{event.departureLocation}}</p>
-			</div>
+
+			{% set number = 1 %}
+			<h3 class=" my-1">Mes étapes</h3>
+			{% for stepDetail in event.mySteps %}
+				<div class="d-flex justify-content-between">
+					<p class="card-text text-success my-1">étape n°{{number}}</p>
+					<p class="card-text text-secondary my-1">{{stepDetail.stepCity}}</p>
+					{% set number = number + 1 %}
+				</div>
+			{% endfor %}
 			<div class="d-flex justify-content-between">
 				<p class="card-text text-success my-1">Date de retour</p>
 				<p class="card-text text-secondary my-1">{{event.endDate|date("d/m/Y")}}</p>
 			</div>
-			<div class="d-flex justify-content-between">
-				<p class="card-text text-success my-1">Lieu de retour</p>
-				<p class="card-text text-secondary my-1">{{event.backLocation}}</p>
-			</div>
-			<div class="d-flex justify-content-between">
-				<p class="card-text text-success my-1">Etape</p>
-				<p class="card-text text-secondary my-1">{{event.step}}</p>
-			</div>
+
 			<div class="d-flex justify-content-between">
 				<p class="card-text text-success my-1">Niveau</p>
 				<p class="card-text text-secondary my-1">{{event.type}}</p>
@@ -54,27 +70,27 @@
 				{{event.riderJoin.length}}+</p>
 
 			{% if user.id != userEvent.id %}
-			
-			{# Verifie si l'utilisateur participe à la sortie ou non #}
-			{% set iParticipate = false %}
-			{% for idRider in event.riderJoin %}
-				{% if idRider == user._id %}
-					{% set iParticipate = true %}
-				{% endif %}
-			{% endfor %}
-			<div class="d-flex justify-content-end">
-			{% if event.riderJoin.length == 0 %}
-				<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-primary col-4">Je participe</a>
-			{% elseif iParticipate %}
-				<a href="/annulerParticipation/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-primary col-4">Ne plus participer</a>
-			{% else %}
-				<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-primary col-4">Je participe</a>
-			{% endif %}
-			</div>
+
+				{# Verifie si l'utilisateur participe à la sortie ou non #}
+				{% set iParticipate = false %}
+				{% for idRider in event.riderJoin %}
+					{% if idRider == user._id %}
+						{% set iParticipate = true %}
+					{% endif %}
+				{% endfor %}
+				<div class="d-flex justify-content-end">
+					{% if event.riderJoin.length == 0 %}
+						<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-primary col-4">Je participe</a>
+					{% elseif iParticipate %}
+						<a href="/annulerParticipation/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-primary col-4">Ne plus participer</a>
+					{% else %}
+						<a href="/rejoindreEvenement/{{event._id}}/{{userEvent._id}}/{{user._id}}" class="btn btn-primary col-4">Je participe</a>
+					{% endif %}
+				</div>
 
 			{% endif %}
-			
-				<div class="d-flex flex-column align-items-end">
+
+			<div class="d-flex flex-column align-items-end">
 				{% if user.id == userEvent.id  %}
 					<a href="/supprimerEvenement/{{event._id}}/{{userEvent._id}}" class="btn btn-danger col-4 my-2">Supprimer</a>
 					<a href="/modifierEvenement/{{event._id}}/{{userEvent._id}}" class="btn btn-light border col-4 border-secondary rounded">Modifier</a>
@@ -82,8 +98,19 @@
 					<a href="/supprimerEvenement/{{event._id}}/{{userEvent._id}}" class="btn btn-danger col-4 my-2">Supprimer</a>
 					<a href="/modifierEvenement/{{event._id}}/{{userEvent._id}}" class="btn btn-light border col-4 border-secondary rounded">Modifier</a>
 				{% endif %}
-				</div>
+			</div>
 		</article>
 
 	</main>
+
+	<!-- Fichier JS -->
+	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+
+
+	<!-- Ces deux balises script sont à insérer entre les deux balises existantes -->
+	<script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+	<script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+
+	<script src="/js/openStreetMap/event.js"></script>
+
 {% endblock %}
