--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -1,18 +1,31 @@
 {% extends "../../main.html.twig" %}
+
+{% block stylesheets %}
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link
+	rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+	<!-- Ces deux balises link sont à insérer entre les deux balises existantes -->
+	<link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"/>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css"/>
+
+	<link href="/main.css" rel="stylesheet">
+{% endblock %}
+
 {% block main %}
 
 	{% if not inspectedUser %}
 		{% set inspectedUser = user %}
 	{% endif %}
 
-	<main class="">
+	<main
+		class="">
 		{# section profil #}
 		<section class="card col-12 col-md-6 col-lg-6 mt-3 container p-0 d-flex align-items-center">
 			{% if not inspectedUser.picture %}
-					<a href="/profil/{{inspectedUser._id}}" class="col-2 p-1"><img class="col-12 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/></a>
-				{% else %}
-					<a href="/profil/{{inspectedUser._id}}" class="col-2 p-1"><img class="col-12 rounded-circle" src="/images/userImages/{{inspectedUser.id}}/{{inspectedUser.picture}}" alt="image de profil" class="card-img-top"/></a>
-				{% endif %}
+				<a href="/profil/{{inspectedUser._id}}" class="col-2 p-1"><img class="col-12 rounded-circle" src="../pictures/default.jpg" class="card-img-top"/></a>
+			{% else %}
+				<a href="/profil/{{inspectedUser._id}}" class="col-2 p-1"><img class="col-12 rounded-circle" src="/images/userImages/{{inspectedUser.id}}/{{inspectedUser.picture}}" alt="image de profil" class="card-img-top"/></a>
+			{% endif %}
 			<p class="card-title h5">{{inspectedUser.pseudo}}</p>
 			<p class="card-subtitle mb-2 text-muted">{{user.motoUser[0].brand}}
 				{{user.motoUser[0].model}}
@@ -64,8 +77,8 @@
 									{{user.motoUser[0].cylinder}}</p>
 							</div>
 						</div>
-						<h5 style="color:#2b3658;" class=" m-0">{{event.departureLocation}}</h5>
-						<h5 style="color:#2b3658;" class=" m-0">{{event.backLocation}}</h5>
+						<h5 style="color:#2b3658;" class=" m-0">{{event.mySteps[0].stepCity}}</h5>
+						<h5 style="color:#2b3658;" class=" m-0">{{event.mySteps[event.mySteps.length - 1].stepCity}}</h5>
 						<p class="m-0 text-secondary">&#x1F552; Du
 							{{event.startDate|date("d/m/Y")}}
 							au
@@ -75,7 +88,12 @@
 							{{event.riderJoin.length}}+</p>
 					</div>
 					<div class="col-6">
-						<iframe title="card exemple" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
+						<div class="myCards ">
+							{% for pos in event.mySteps %}
+								<input type="hidden" class="stepsLat" value="{{pos.stepLat}}">
+								<input type="hidden" class="stepsLon" value="{{pos.stepLon}}">
+							{% endfor %}
+						</div>
 						<div class="d-flex justify-content-end">
 							<a href="/evenement/{{event._id}}/{{inspectedUser._id}}" class="btn btn-light text-primary col-4">Détails</a>
 						</div>
@@ -99,17 +117,28 @@
 								<a href="/profil/{{authorEvent.authorEventInfo.id}}" class="col-2 p-1"><img class="col-2 p-1 rounded-circle" src="/images/userImages/{{authorEvent.authorEventInfo.id}}/{{authorEvent.authorEventInfo.picture}}" alt="image de profil qui organise une sortie" class="card-img-top"/></a>
 								<div>
 									<h6 class="card-title">{{authorEvent.authorEventInfo.pseudo}}</h5>
-									<p class="card-subtitle mb-2 text-muted">{{authorEvent.authorEventInfo.motoUser[0].brand}} {{authorEvent.authorEventInfo.motoUser[0].model}} {{authorEvent.authorEventInfo.motoUser[0].cylinder}}</p>
+									<p class="card-subtitle mb-2 text-muted">{{authorEvent.authorEventInfo.motoUser[0].brand}}
+										{{authorEvent.authorEventInfo.motoUser[0].model}}
+										{{authorEvent.authorEventInfo.motoUser[0].cylinder}}</p>
 								</div>
 							</div>
-							<h5 style="color:#2b3658;" class=" ">{{event.departureLocation}}</h5>
-							<h5 style="color:#2b3658;" class=" ">{{event.backLocation}}</h5>
-							<p class="m-0 text-secondary">&#x1F552; Du {{event.startDate|date("d/m/Y")}} au {{event.endDate|date("d/m/Y")}}</p> <!-- pour configurer le format de la date -->
-							<p class="text-success m-0">Rider {{event.riderJoin.length}}+</p>
+							<h5 style="color:#2b3658;" class=" m-0">{{event.mySteps[0].stepCity}}</h5>
+							<h5 style="color:#2b3658;" class=" m-0">{{event.mySteps[event.mySteps.length - 1].stepCity}}</h5>
+							<p class="m-0 text-secondary">&#x1F552; Du
+								{{event.startDate|date("d/m/Y")}}
+								au
+								{{event.endDate|date("d/m/Y")}}</p>
+							<!-- pour configurer le format de la date -->
+							<p class="text-success m-0">Rider
+								{{event.riderJoin.length}}+</p>
 						</div>
 						<div class="col-6">
-							<iframe  title="card exemple" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1456402.9825108857!2d3.921280050206282!3d44.524634635339055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x12c9bf4344da5333%3A0x40819a5fd970220!2sMarseille!3m2!1d43.296482!2d5.3697799999999996!4m5!1s0x47f4ea516ae88797%3A0x408ab2ae4bb21f0!2sLyon!3m2!1d45.764043!2d4.835659!5e0!3m2!1sfr!2sfr!4v1647353202440!5m2!1sfr!2sfr" width="100%" height="" style="border-radius:5;" allowfullscreen="" loading="lazy"></iframe>
-
+							<div class="myCards ">
+								{% for stepDetail in event.mySteps %}
+									<input type="hidden" class="stepsLat" value="{{stepDetail.stepLat}}">
+									<input type="hidden" class="stepsLon" value="{{stepDetail.stepLon}}">
+								{% endfor %}
+							</div>
 							{# Verifie si l'utilisateur participe à la sortie ou non #}
 							{% set iParticipate = false %}
 							{% for idRider in event.riderJoin %}
@@ -146,6 +175,16 @@
 				<img class="col-4 " src="/pictures/motard.jpg" alt="image de moto">
 			</article>
 		</section>
+
+		<!-- Fichier JS -->
+		<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+
+
+		<!-- Ces deux balises script sont à insérer entre les deux balises existantes -->
+		<script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+		<script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+
+		<script src="/js/openStreetMap/profil.js"></script>
 
 	</main>
 {% endblock %}
